--- a/PR060-2019-Web-projekat/Content/Site.css
+++ b/PR060-2019-Web-projekat/Content/Site.css
@@ -1,17 +1,41 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: #97908e;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+li,a {
+    color: antiquewhite ;
+    text-decoration: none;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
+    background-color:#372c2a ;
+}
+
+.nav_links {
+    list-style: none;
+    margin: 0;
+    background-color: #372c2a;
+}
+
+.nav_links li {
+    display: inline-block;
+    padding: 0 20px;
+    background-color: #372c2a;
+}
+
+.nav_links li a {
+    transition: all 0.3s ease 0s;
+    background-color: #372c2a;
+}
+
+.nav_links li a:hover {
+    color: #71615c;
+    text-decoration: none;
 }
